--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
 jobs:
   build:
     docker:
-      - image: cimg/python:latest  # Use the latest Python image
+      - image: cimg/python  # Use the latest Python image
     steps:
       - checkout
       - run:
